--- a/store-usersubscription-example/src/main/resources/application.properties
+++ b/store-usersubscription-example/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8081
 management.endpoints.web.exposure.include=prometheus
+logstash.host=localhost
+logstash.port=7000
+logstash.queue-size=512
