--- a/store-videogame-products-example/src/main/resources/application.properties
+++ b/store-videogame-products-example/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port=8082
+server.port=8100
+management.endpoints.web.exposure.include=prometheus
+spring.application.name=videogame-example-second
+logstash.host=localhost
+logstash.port=8008
+logstash.queue-size=512
