Adding third microservice and update other two in Java 17

--- a/store-videogame-products-example/Dockerfile
+++ b/store-videogame-products-example/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.8-jdk-11
+FROM maven:3.8-openjdk-17
 EXPOSE 8082
 ADD /target/videogamestore.jar videogamestore.jar
 ENTRYPOINT ["java", "-jar", "videogamestore.jar"]
