--- a/store-usersubscription-example/Dockerfile
+++ b/store-usersubscription-example/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.8-jdk-11
+FROM maven:3.8-openjdk-17
 EXPOSE 8081
 ADD /target/usersubscription.jar usersubscription.jar
 ENTRYPOINT ["java", "-jar", "usersubscription.jar"]
