--- a/store-videogamestore-final/pom.xml
+++ b/store-videogamestore-final/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.videogame.example</groupId>
-	<artifactId>second</artifactId>
+	<artifactId>third</artifactId>
 	<version>3.0.0</version>
-	<name>videogame-example-second</name>
-	<description>Esempio di un ECommerce di Videogiochi - Secondo Microservizio</description>
+	<name>videogame-example-third</name>
+	<description>Esempio di un attività di videogiochi completa</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -21,7 +21,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -49,7 +48,6 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -59,5 +57,4 @@
 		</plugins>
 		<finalName>videogamestore</finalName>
 	</build>
-
 </project>
