--- a/store-videogamestore-final-example/Dockerfile
+++ b/store-videogamestore-final-example/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.8-openjdk-21
+FROM maven:3.9-sapmachine-21
 EXPOSE 8080
 ADD /target/videogamestore.jar videogamestore.jar
 ENTRYPOINT ["java", "-jar", "videogamestore.jar"]
