--- a/store-videogame-products-example/pom.xml
+++ b/store-videogame-products-example/pom.xml
@@ -56,6 +56,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.amashchenko.maven.plugin</groupId>
+				<artifactId>gitflow-maven-plugin</artifactId>
+				<version>1.21.0</version>
+			</plugin>
 		</plugins>
 		<finalName>videogamestore</finalName>
 	</build>
