Added configuration from master branch for gitflow

--- a/store-videogame-products-example/pom.xml
+++ b/store-videogame-products-example/pom.xml
@@ -60,6 +60,11 @@
 				<groupId>com.amashchenko.maven.plugin</groupId>
 				<artifactId>gitflow-maven-plugin</artifactId>
 				<version>1.21.0</version>
+				<configuration>
+					<gitFlowConfig>
+						<developmentBranch>master</developmentBranch>
+					</gitFlowConfig>
+				</configuration>
 			</plugin>
 		</plugins>
 		<finalName>videogamestore</finalName>
