--- a/store-videogamestore-final-example/pom.xml
+++ b/store-videogamestore-final-example/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.videogame.example</groupId>
-	<artifactId>second</artifactId>
+	<artifactId>third</artifactId>
 	<version>3.0.0</version>
-	<name>videogame-example-second</name>
-	<description>Esempio di un ECommerce di Videogiochi - Secondo Microservizio</description>
+	<name>videogame-example-third</name>
+	<description>Esempio di un ECommerce di Videogiochi - Terzo Microservizio</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -39,7 +39,7 @@
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>5.1</version>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
@@ -60,9 +60,14 @@
 				<groupId>com.amashchenko.maven.plugin</groupId>
 				<artifactId>gitflow-maven-plugin</artifactId>
 				<version>1.21.0</version>
+				<configuration>
+					<gitFlowConfig>
+						<developmentBranch>master</developmentBranch>
+					</gitFlowConfig>
+				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>videogamestore</finalName>
+		<finalName>videogamestorefinal</finalName>
 	</build>
 
 </project>
