--- a/store-usersubscription-example/pom.xml
+++ b/store-usersubscription-example/pom.xml
@@ -59,6 +59,11 @@
 				<groupId>com.amashchenko.maven.plugin</groupId>
 				<artifactId>gitflow-maven-plugin</artifactId>
 				<version>1.21.0</version>
+				<configuration>
+					<gitFlowConfig>
+						<developmentBranch>master</developmentBranch>
+					</gitFlowConfig>
+				</configuration>
 			</plugin>
 		</plugins>
 		<finalName>usersubscription</finalName>
