--- a/store-usersubscription-example/pom.xml
+++ b/store-usersubscription-example/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.videogame.example</groupId>
 	<artifactId>first</artifactId>
-	<version>3.0.6-SNAPSHOT</version>
+	<version>3.1.0</version>
 	<name>videogame-example-first</name>
 	<description>Esempio di un ECommerce di Videogiochi</description>
 	<properties>
